--- a/package.json
+++ b/package.json
@@ -1,48 +1,100 @@
 {
-  "name": "test-project",
-  "version": "0.0.0",
+  "name": "UserList",
+  "version": "0.0.1",
+  "author": "Irina Klimova",
+  "private": false,
+  "homepage": "",
+  "license": "MIT",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "build:dev": "npm run clean:dist && npm run webpack -- --config config/webpack.js --progress --profile",
+    "build:prod": "npm run clean:dist && npm run webpack -- --config config/webpack.js  --progress --profile",
+    "build": "npm run build:dev",
+    "clean:dll": "npm run rimraf -- dll",
+    "clean:aot": "npm run rimraf -- compiled",
+    "clean:dist": "npm run rimraf -- dist",
+    "clean:install": "npm set progress=false && npm install",
+    "clean": "npm cache clean --force && npm run rimraf -- node_modules doc coverage dist compiled dll",
+    "lint": "npm run tslint \"src/**/*.ts\"",
+    "node": "node",
+    "preclean:install": "npm run clean",
+    "rimraf": "rimraf",
+    "server:dev:hmr": "npm run server:dev -- --hotOnly",
+    "server:dev": "npm run webpack-dev-server -- --config config/webpack.js --open --progress --profile --watch --content-base src/",
+    "server": "npm run server:dev",
+    "start:hmr": "npm run server:dev:hmr",
+    "start": "npm run server:dev",
+    "webpack-dev-server": "node --max_old_space_size=4096 node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "webpack": "node --max_old_space_size=4096 node_modules/webpack/bin/webpack.js"
   },
-  "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.0",
-    "@angular/common": "^6.1.0",
-    "@angular/compiler": "^6.1.0",
-    "@angular/core": "^6.1.0",
-    "@angular/forms": "^6.1.0",
-    "@angular/http": "^6.1.0",
-    "@angular/platform-browser": "^6.1.0",
-    "@angular/platform-browser-dynamic": "^6.1.0",
-    "@angular/router": "^6.1.0",
-    "core-js": "^2.5.4",
-    "rxjs": "^6.0.0",
-    "zone.js": "~0.8.26"
+    "@angular/animations": "^5.2.10",
+    "@angular/common": "^5.2.10",
+    "@angular/compiler": "^5.2.10",
+    "@angular/core": "^5.2.10",
+    "@angular/forms": "^5.2.10",
+    "@angular/http": "^5.2.10",
+    "@angular/platform-browser": "^5.2.10",
+    "@angular/platform-browser-dynamic": "^5.2.10",
+    "@angular/platform-server": "^5.2.10",
+    "@angular/router": "^5.2.10",
+    "@angularclass/hmr": "~2.1.3",
+    "@angularclass/hmr-loader": "^3.0.4",
+    "core-js": "^2.5.6",
+    "rxjs": "^5.5.10",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.7.0",
-    "@angular/cli": "~6.1.3",
-    "@angular/compiler-cli": "^6.1.0",
-    "@angular/language-service": "^6.1.0",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.2.1",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.1",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.0",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.3.0",
-    "ts-node": "~5.0.1",
-    "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "@angular/cli": "1.6.6",
+    "@angular/compiler-cli": "^5.2.10",
+    "@types/jasmine": "2.8.6",
+    "@types/node": "8.0.53",
+    "@types/source-map": "^0.5.7",
+    "@types/uglify-js": "^2.6.31",
+    "@types/webpack": "^3.8.12",
+    "add-asset-html-webpack-plugin": "^2.1.3",
+    "angular2-template-loader": "^0.6.2",
+    "assets-webpack-plugin": "^3.5.1",
+    "awesome-typescript-loader": "^3.5.0",
+    "codelyzer": "^4.3.0",
+    "copy-webpack-plugin": "^4.5.1",
+    "cross-env": "^5.1.5",
+    "exports-loader": "^0.6.4",
+    "expose-loader": "^0.7.5",
+    "extract-text-webpack-plugin": "~3.0.2",
+    "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^2.30.1",
+    "imports-loader": "^0.7.1",
+    "inline-manifest-webpack-plugin": "^3.0.1",
+    "ng-router-loader": "^2.1.0",
+    "ngc-webpack": "^3.2.2",
+    "npm-run-all": "^4.1.3",
+    "optimize-js-plugin": "0.0.4",
+    "parse5": "^3.0.3",
+    "preload-webpack-plugin": "^2.3.0",
+    "pug": "^2.0.3",
+    "pug-html-loader": "^1.1.5",
+    "raw-loader": "0.5.1",
+    "rimraf": "~2.6.2",
+    "script-ext-html-webpack-plugin": "^1.8.8",
+    "source-map-loader": "^0.2.3",
+    "string-replace-loader": "~1.3.0",
+    "style-loader": "^0.19.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
+    "to-string-loader": "^1.1.5",
+    "ts-node": "^4.1.0",
+    "tslib": "^1.9.1",
+    "typescript": "~2.6.2",
+    "uglifyjs-webpack-plugin": "^1.2.5",
+    "url-loader": "^0.6.2",
+    "webpack": "^3.12.0",
+    "webpack-dev-middleware": "^1.12.2",
+    "webpack-dev-server": "^2.11.2",
+    "webpack-dll-bundles-plugin": "^1.0.0-beta.5",
+    "webpack-merge": "^4.1.2"
+  },
+  "engines": {
+    "node": ">= 8",
+    "npm": ">= 5"
   }
 }
